# hidroxai-mx

./: .env.example  .gitignore  CITATION.cff  CLAUDE.md  CREDITOS.md  LICENSE  LICENSE-DATA.md  Makefile  README.md  dvc.yaml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
conf/: cuencas_piloto.yaml  sources.yaml
docs/: _build_manuscrito_docx.js  cem_descarga.md  fuentes_verificacion.md  manuscrito_data_in_brief_borrador.docx
notebooks/: 01_acceso_datos_r2.ipynb  02_reporte_cobertura.ipynb
scripts/: 00_verify_sources.py  01_download_sih_catalogs.py  02_download_smn_kmz.py  03_download_sih_series.py  04_build_canonical.py  05_select_stations.py  06_delineate_basins.py  06b_build_cem_per_basin.py  07_build_features.py  08_storage_report.py  09_make_report_figures.py  11_build_zenodo_bundle.py  12_make_workflow_figure.py  setup_dvc_r2.sh
src/hidroxai_mx/: __init__.py  report.py
src/hidroxai_mx/data/: __init__.py  clean.py  persist.py  schema.py
src/hidroxai_mx/features/: __init__.py
src/hidroxai_mx/geo/: __init__.py  delineate.py  spatial.py
src/hidroxai_mx/io/: __init__.py  conagua.py  inegi.py  smn.py
src/hidroxai_mx/utils/: __init__.py  download.py
tests/: test_features.py  test_report.py  test_schema.py  test_sih_parsers.py
