[project]
name = "hidroxai-mx"
version = "0.1.0"
description = "Pronóstico explicable de niveles hidrométricos y clima local en México (IPN, proyecto IND-2026-0335)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Daniel Sánchez Ruiz (UPIIT, Instituto Politécnico Nacional)" }]

# --- Dependencias núcleo para OE1 (dataset) ---
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",            # interpolación cúbica (imputación corta)
    "pyarrow>=16.0",          # Parquet
    "geopandas>=1.0",         # geometría, spatial joins
    "shapely>=2.0",
    "pyproj>=3.6",
    "fiona>=1.9",
    "rasterio>=1.3",          # CEM (GeoTIFF), delineación
    "xarray>=2024.6",         # series/grillas (CHIRPS, CLICOM-MALLA)
    "requests>=2.32",
    "pooch>=1.8",             # caché de descargas reproducible
    "fsspec>=2024.6",
    "fastkml>=1.0",           # parseo de KMZ (SMN/EMAS)
    "openpyxl>=3.1",          # EMAS.xlsx
    "pandera>=0.20",          # validación de esquemas
    "PyYAML>=6.0",
    "tqdm>=4.66",
    "click>=8.1",             # CLI de los scripts
    "python-dotenv>=1.0",
    "climate-indices>=2.0",   # SPI / SPEI
    "statsmodels>=0.14",      # STL, ARIMA (baseline)
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "dvc[s3]>=3.50",          # versionado de datos
    "jupyterlab>=4.2",
    "ipykernel>=6.29",
    "matplotlib>=3.8",
]
# Procesamiento pesado / geoprocesamiento avanzado (instalar cuando se requiera)
geo = [
    "whitebox>=2.3",          # delineación de cuencas (fill, d8, flow accumulation)
    "dask[complete]>=2024.6", # paralelización del pipeline
    "rioxarray>=0.15",
]
# Conversión de BANDAS .mdb cuando no haya mdbtools del sistema
mdb = [
    "pandas-access>=0.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hidroxai_mx"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
packages = ["hidroxai_mx"]

[tool.pytest.ini_options]
addopts = "-q --cov=hidroxai_mx --cov-report=term-missing"
testpaths = ["tests"]
